# completion-forge

./: CLAUDE.md  Cargo.nix  Cargo.toml  flake.nix
src/: convert.rs  error.rs  ir.rs  lib.rs  main.rs  spec.rs
