[package]
name = "completion-forge"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Generate shell completions from OpenAPI specs"
license = "MIT"
repository = "https://github.com/pleme-io/completion-forge"

[lib]
name = "completion_forge"
path = "src/lib.rs"

[[bin]]
name = "completion-forge"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
heck = "0.5"
sekkei = { git = "https://github.com/pleme-io/sekkei" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
